--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,14 @@ address {
   width: 90%;
   margin: 50px;
 }
+
+img {
+  width: 100%;
+}
+
+figure {
+  margin: 0;
+}
 /* ------ Base Header - Footer ------ */
 
 header, 
@@ -156,6 +164,14 @@ header {
 
 header .content-wrapper {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header figure {
+  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -236,6 +252,10 @@ footer .copyright {
   display: flex;
   justify-content: center;
   align-items: row wrap;
+  background-image: url('img/jake-melara-30679-unsplash.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .hereo-area h1 {
@@ -491,6 +511,13 @@ input[type=button] {
 
   .header-divider {
     display: none;
+  }
+
+  header figure {
+    width: 30%;
+    display: flex;
+    justify-content: left;
+    align-items: left;
   }
 
   /* Hero Area */
